tests/baselines/reference/implementClausePrecedingExtends.errors.txt
implementClausePrecedingExtends.ts(2,22): error TS1173: 'extends' clause must precede 'implements' clause.


==== implementClausePrecedingExtends.ts (1 errors) ====
    class C { foo: number }
    class D implements C extends C { }
                         ~~~~~~~
!!! error TS1173: 'extends' clause must precede 'implements' clause.